--- a/src/app/Paginas/LadoAdmin/Formulas/crear-formula/crear-formula.component.html
+++ b/src/app/Paginas/LadoAdmin/Formulas/crear-formula/crear-formula.component.html
@@ -1,6 +1,6 @@
 <div class="container TextWhite mtt ff shadow-lg rounded-2">
     <form #f="ngForm" (ngSubmit)="registrarFormula(f)" class="container">
-        <h3 class="text-start py-3">NUEVA FORMULA</h3>
+        <h3 class="text-start py-3">NUEVA FÓRMULA</h3>
         <hr />
         
 
@@ -55,7 +55,7 @@
         <div class="row py-4">
             <div class="col-6 col-sm-6 col-md-3 col-lg-3 text-center mt-2">
                 <div class="">
-                    <button class="btn btn-success" type="submit" id=""  matTooltip="Agregar formula">AGREGAR</button>
+                    <button class="btn btn-success" type="submit" id=""  matTooltip="Agregar Fórmula">AGREGAR</button>
                 </div>
             </div>
             <div class="col-6 col-sm-6 col-md-3 col-lg-3 text-center mt-2">
@@ -64,7 +64,7 @@
                 </div>
             </div>
             <div class="col-md-6 col-lg-6 text-center mt-3">
-                <i class="fa-solid fa-arrow-left icono" (click)="volver()"  matTooltip="Volver al listado"></i>
+                <i class="fa-solid fa-arrow-left icono" (click)="volver()"  matTooltip="Volver al Listado"></i>
             </div>
         </div>
 
