--- a/src/app/Paginas/LadoAdmin/ItemsProducto/agregar-medida/agregar-medida.component.html
+++ b/src/app/Paginas/LadoAdmin/ItemsProducto/agregar-medida/agregar-medida.component.html
@@ -9,7 +9,7 @@
             <h3 class="text-start py-3 mt-1">MEDIDA</h3>
         </div>
         <div class="col-8 col-sm-8 col-md-9 col-lg-10 text-start py-3">
-            <button class="btn btnCeleste" (click)="nuevo('nuevo')" matTooltip="Nueva medida">NUEVO</button>
+            <button class="btn btnCeleste" (click)="nuevo('nuevo')" matTooltip="Nueva Medida">NUEVO</button>
         </div>
     </div>
     <hr />
@@ -73,7 +73,7 @@
             <div class="row py-4">
                 <div class="col-6 col-sm-6 col-md-3 col-lg-3 text-center mt-2">
                     <div class="">
-                        <button class="btn btn-success" type="submit" id="" matTooltip="Agregar medida">AGREGAR</button>
+                        <button class="btn btn-success" type="submit" id="" matTooltip="Agregar Medida">AGREGAR</button>
                     </div>
                 </div>
                 <div class="col-6 col-sm-6 col-md-3 col-lg-3 text-center mt-2">
@@ -82,7 +82,7 @@
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-6 text-center mt-3">
-                    <i class="fa-solid fa-arrow-left icono" (click)="volver()" matTooltip="Volver al listado"></i>
+                    <i class="fa-solid fa-arrow-left icono" (click)="volver()" matTooltip="Volver al Listado"></i>
                 </div>
             </div>
         </form>
