--- a/src/app/Paginas/LadoAdmin/MateriasPrimas/listado-materia-prima/listado-materia-prima.component.html
+++ b/src/app/Paginas/LadoAdmin/MateriasPrimas/listado-materia-prima/listado-materia-prima.component.html
@@ -24,7 +24,7 @@
         </div>
 
         <div class="col-6 col-sm-6 col-md-7 col-lg-8 text-start py-3">
-            <button class="btn btnCeleste" (click)="agregar()" matTooltip="Nueva materia prima">NUEVO</button>
+            <button class="btn btnCeleste" (click)="agregar()" matTooltip="Nueva Materia Prima">NUEVO</button>
         </div>
     </div>
     <hr />
@@ -54,7 +54,7 @@
                     <td>{{materia.descripcion}}</td>
                     <td>
                         <i type="button" class="fa-solid fa-pencil me-3 iconoLista " (click)="Modificar(materia.codigo)"
-                            matTooltip="Modificar materia prima"></i>
+                            matTooltip="Modificar Materia Prima"></i>
                     </td>
                 </tr>
             </tbody>
