--- a/src/app/Paginas/LadoAdmin/OrdenesProduccion/modificar-ordenes-produccion/modificar-ordenes-produccion.component.html
+++ b/src/app/Paginas/LadoAdmin/OrdenesProduccion/modificar-ordenes-produccion/modificar-ordenes-produccion.component.html
@@ -120,7 +120,7 @@
         <div class="row py-4">
             <div class="col-6 col-sm-6 col-md-3 col-lg-3 text-center mt-2">
                 <div class="">
-                    <button class="btn btn-success" type="submit" id=""  matTooltip="Modificar orden">MODIFICAR</button>
+                    <button class="btn btn-success" type="submit" id=""  matTooltip="Modificar Orden">MODIFICAR</button>
                 </div>
             </div>
             <div class="col-6 col-sm-6 col-md-3 col-lg-3 text-center mt-2">
@@ -129,7 +129,7 @@
                 </div>
             </div>
             <div class="col-md-6 col-lg-6 text-center mt-3">
-                <i class="fa-solid fa-arrow-left icono" (click)="volver()"  matTooltip="Volver al listado"></i>
+                <i class="fa-solid fa-arrow-left icono" (click)="volver()"  matTooltip="Volver al Listado"></i>
             </div>
         </div>
 
