--- a/src/app/Paginas/LadoCliente/card-inicio/card-inicio.component.html
+++ b/src/app/Paginas/LadoCliente/card-inicio/card-inicio.component.html
@@ -1,8 +1,8 @@
 <div class="card text-bg-dark">
     <img src={{imagen}} class="card-img" alt="...">
     <div class="card-img-overlay">
-      <h5 class="card-title TextWhite">{{nombre}}</h5>
-      <p class="card-text TextWhite">{{descripcion}}</p>
-      <p class="card-text TextWhite"><small>{{codigo}}</small></p>
+      <h5 class="card-title TextAzul">{{nombre}}</h5>
+      <p class="card-text TextAzul">{{descripcion}}</p>
+      <p class="card-text TextAzul"><small>{{codigo}}</small></p>
     </div>
   </div>
