--- a/src/app/Paginas/LadoAdmin/ItemsProducto/agregar-precio/agregar-precio.component.html
+++ b/src/app/Paginas/LadoAdmin/ItemsProducto/agregar-precio/agregar-precio.component.html
@@ -11,7 +11,7 @@
             <h3 class="text-start py-3 mt-1">PRECIOS</h3>
         </div>
         <div class="col-8 col-sm-8 col-md-9 col-lg-10 text-start py-3">
-            <button class="btn btnCeleste" (click)="nuevo('nuevo')" matTooltip="Nuevo precio">NUEVO</button>
+            <button class="btn btnCeleste" (click)="nuevo('nuevo')" matTooltip="Nuevo Precio">NUEVO</button>
         </div>
     </div>
     <hr />
@@ -107,7 +107,7 @@
             <div class="row py-4">
                 <div class="col-6 col-sm-6 col-md-3 col-lg-3 text-center mt-2">
                     <div class="">
-                        <button class="btn btn-success" type="submit" id="" matTooltip="Agregar precio">AGREGAR</button>
+                        <button class="btn btn-success" type="submit" id="" matTooltip="Agregar Precio">AGREGAR</button>
                     </div>
                 </div>
                 <div class="col-6 col-sm-6 col-md-3 col-lg-3 text-center mt-2">
@@ -116,7 +116,7 @@
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-6 text-center mt-3">
-                    <i class="fa-solid fa-arrow-left icono" (click)="volver()" matTooltip="Volver al listado"></i>
+                    <i class="fa-solid fa-arrow-left icono" (click)="volver()" matTooltip="Volver al Listado"></i>
                 </div>
             </div>
         </form>
