--- a/src/app/Paginas/LadoAdmin/ItemsProducto/agregar-tipo/agregar-tipo.component.html
+++ b/src/app/Paginas/LadoAdmin/ItemsProducto/agregar-tipo/agregar-tipo.component.html
@@ -10,7 +10,7 @@
             <h3 class="text-start py-3 mt-1">TIPO DE PRODUCTO</h3>
         </div>
         <div class="col-5 col-sm-5 col-md-5 col-lg-8 text-start py-3">
-            <button class="btn btnCeleste" (click)="nuevo('nuevo')" matTooltip="Nuevo tipo de producto">NUEVO</button>
+            <button class="btn btnCeleste" (click)="nuevo('nuevo')" matTooltip="Nuevo Tipo de Producto">NUEVO</button>
         </div>
     </div>
     <hr />
@@ -88,7 +88,7 @@
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-6 text-center mt-3">
-                    <i class="fa-solid fa-arrow-left icono" (click)="volver()" matTooltip="Volver al listado"></i>
+                    <i class="fa-solid fa-arrow-left icono" (click)="volver()" matTooltip="Volver al Listado"></i>
                 </div>
             </div>
         </form>
