--- a/src/app/Paginas/LadoAdmin/OrdenesProduccion/alta-ordenes-produccion/alta-ordenes-produccion.component.html
+++ b/src/app/Paginas/LadoAdmin/OrdenesProduccion/alta-ordenes-produccion/alta-ordenes-produccion.component.html
@@ -112,7 +112,7 @@
         <div class="row py-4">
             <div class="col-6 col-sm-6 col-md-3 col-lg-3 text-center mt-2">
                 <div class="">
-                    <button class="btn btn-success" type="submit" id="" matTooltip="Generar orden">GENERAR</button>
+                    <button class="btn btn-success" type="submit" id="" matTooltip="Generar Orden">GENERAR</button>
                 </div>
             </div>
             <div class="col-6 col-sm-6 col-md-3 col-lg-3 text-center mt-2">
@@ -121,7 +121,7 @@
                 </div>
             </div>
             <div class="col-md-6 col-lg-6 text-center mt-3">
-                <i class="fa-solid fa-arrow-left icono" (click)="volver()" matTooltip="Volver al listado"></i>
+                <i class="fa-solid fa-arrow-left icono" (click)="volver()" matTooltip="Volver al Listado"></i>
             </div>
         </div>
 
