--- a/src/app/Paginas/LadoAdmin/OrdenesProduccion/listado-ordenes-produccion/listado-ordenes-produccion.component.css
+++ b/src/app/Paginas/LadoAdmin/OrdenesProduccion/listado-ordenes-produccion/listado-ordenes-produccion.component.css
@@ -2,3 +2,17 @@
     background: none;
     border: none;
 }
+
+
+.estado-pendiente {
+    color: yellow;
+  }
+  
+  .estado-finalizado {
+    color: green;
+  }
+  
+  .estado-cancelado {
+    color: red;
+  }
+  
