--- a/src/app/Paginas/LadoAdmin/Productos/modificar-producto/modificar-producto.component.html
+++ b/src/app/Paginas/LadoAdmin/Productos/modificar-producto/modificar-producto.component.html
@@ -118,12 +118,12 @@
             <div class="col-md-6 col-lg-6 text-center mt-2"></div>
             <div class="col-6 col-sm-6 col-md-3 col-lg-3 text-center mt-2">
                 <div class="">
-                    <button class="btn btn-success" type="submit" id=""  matTooltip="Modificar producto">MODIFICAR</button>
+                    <button class="btn btn-success" type="submit" id=""  matTooltip="Modificar Producto">MODIFICAR</button>
                 </div>
             </div>
             <div class="col-6 col-sm-6 col-md-3 col-lg-3 text-center ">
                 <div class="col-md-6 col-lg-6 text-center mt-3">
-                    <i class="fa-solid fa-arrow-left icono" (click)="volver()"  matTooltip="Volver al listado"></i>
+                    <i class="fa-solid fa-arrow-left icono" (click)="volver()"  matTooltip="Volver al Listado"></i>
                 </div>
             </div>
         </div>
