--- a/src/app/Paginas/LadoAdmin/StockMateriaPrima/crear-stock-materia-prima/crear-stock-materia-prima.component.html
+++ b/src/app/Paginas/LadoAdmin/StockMateriaPrima/crear-stock-materia-prima/crear-stock-materia-prima.component.html
@@ -96,7 +96,7 @@
         <div class="row py-4">
             <div class="col-6 col-sm-6 col-md-3 col-lg-3 text-center mt-2">
                 <div class="">
-                    <button class="btn btn-success" type="submit" id="" matTooltip="Agregar stock">AGREGAR</button>
+                    <button class="btn btn-success" type="submit" id="" matTooltip="Agregar Stock">AGREGAR</button>
                 </div>
             </div>
             <div class="col-6 col-sm-6 col-md-3 col-lg-3 text-center mt-2">
@@ -105,7 +105,7 @@
                 </div>
             </div>
             <div class="col-md-6 col-lg-6 text-center mt-3">
-                <i class="fa-solid fa-arrow-left icono" (click)="volver()" matTooltip="Volver al listado"></i>
+                <i class="fa-solid fa-arrow-left icono" (click)="volver()" matTooltip="Volver al Listado"></i>
             </div>
         </div>
 
